--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           </address>
         </div>
 
-        <div>
+        <div class="footer-social">
           <h3 class="footer-title">присоединяйтесь</h3>
           <ul class="social list">
             <li class="social-list">
@@ -376,6 +376,20 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-mailing">
+          <h3 class="footer-title">Подпишитесь на рассылку</h3>
+          <form class="mailing-list">
+            <input class="footer-input" type="email" name="email" placeholder="E-mail">
+            <button class="btn-sub" type="submit">
+              Подписаться
+              <svg class="mailing-send" width="24" height="24">
+                <use href="./images/SVG/icons.svg#send"></use>
+              </svg>
+            </button>
+          </form>
+
+        </div>
       </div>
     </div>
   </footer>
@@ -383,9 +397,41 @@
   <!-- Modal window -->
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <button class="modal-btn" type="button" data-modal-close><svg width="18" height="18">
+      <button class="modal-close-btn" type="button" data-modal-close><svg width="18" height="18">
           <use href="./images/SVG/icons.svg#close"></use>
         </svg></button>
+
+      <form>
+        <div role="group" class="modal-form">
+          <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+
+          <div class="form-group"><label for="name">Имя</label>
+            <input type="text" name="name" id="name">
+          </div>
+
+          <div class="form-group">
+            <label for="tel">Телефон</label>
+            <input type="tel" name="tel" id="tel">
+          </div>
+
+          <div class="form-group">
+            <label for="email">Почта</label>
+            <input type="email" name="email" id="email">
+          </div>
+
+          <div class="form-group">
+            <label for="comment">Комментарий</label>
+            <textarea name="comment" id="comment" placeholder="Введите текст"></textarea>
+          </div>
+
+          <div class="form-group policy">
+            <input type="checkbox" name="policy" id="policy">
+            <label for="policy">Соглашаюсь с рассылкой и принимаю <a href="#">Условия договора</a></label>
+          </div>
+
+          <button class="modal-send-btn" type="submit">Отправить</button>
+        </div>
+      </form>
     </div>
   </div>
 
