finish modal window

--- a/portfolio.html
+++ b/portfolio.html
@@ -216,8 +216,8 @@
           </address>
         </div>
 
-        <div>
-          <h2 class="footer-title">присоединяйтесь</h2>
+        <div class="footer-social">
+          <h3 class="footer-title">присоединяйтесь</h3>
           <ul class="social list">
             <li class="social-list">
               <a class="social-link" href="#" target="_blank" rel="noopener noreferrer" aria-label="instagram">
@@ -244,6 +244,20 @@
                 </svg></a>
             </li>
           </ul>
+        </div>
+
+        <div class="footer-mailing">
+          <h3 class="footer-title">Подпишитесь на рассылку</h3>
+          <form class="mailing-list">
+            <input class="footer-input" type="email" name="email" placeholder="E-mail">
+            <button class="btn-sub" type="submit">
+              Подписаться
+              <svg class="mailing-send" width="24" height="24">
+                <use href="./images/SVG/icons.svg#send"></use>
+              </svg>
+            </button>
+          </form>
+
         </div>
       </div>
     </div>
