--- a/index.html
+++ b/index.html
@@ -434,10 +434,17 @@
             <textarea name="comment" placeholder="Введите текст"></textarea>
           </label>
 
-          <div class="form-policy">
-            <input type="checkbox" name="policy" id="policy">
-            <label for="policy">Соглашаюсь с рассылкой и принимаю <a href="#">Условия договора</a></label>
-          </div>
+          <label class="form-policy">
+            <input class="modal-checkbox" type="checkbox" name="policy">
+            <span class="modal-form-checkbox">
+              <svg class="modal-form-icon" width="11" height="8">
+                <use href="./images/SVG/icons.svg#icon-check"></use>
+              </svg>
+            </span>
+            <span>
+              Соглашаюсь с рассылкой и принимаю <a href="#">Условия договора</a>
+            </span>
+          </label>
 
           <button class="modal-send-btn" type="submit">Отправить</button>
         </div>
